[package]
name = "stark-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stark-bench"
path = "src/main.rs"

[dependencies]
hex = { version = "0.4" }
miden-crypto = { package = "miden-crypto", version = "0.1" }
prover = { package = "winter-prover", version = "0.4.2", features = ["concurrent"] }
rand-utils = { package = "winter-rand-utils", version = "0.4.2" }
structopt = { version = "0.3", default-features = false }
